--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   skynet:
-    platform: linux/arm/v7
+    platform: linux/amd64
     image: skynet
     build:
       context: .
