--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
-          go-version: 1.20.x
+          go-version: 1.23.x
       - name: Go mod vendor
         run: |
           go mod vendor
@@ -30,7 +30,7 @@ jobs:
       - name: Docker Build and Push
         uses: docker/build-push-action@v4
         env:
-          IMAGE_NAME: "nekofluff/skynet"
+          IMAGE_NAME: 'nekofluff/skynet'
         with:
           context: .
           push: true
